# yellowstone-vixen

./: .gitignore  Cargo.toml  README.md
.bmad-core/: install-manifest.yaml
crates/chainstack-grpc-source/: Cargo.toml  README.md
crates/chainstack-grpc-source/src/: config.rs  filter_api.rs  lib.rs  monitoring.rs  redis_stream.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  README.md  TROUBLESHOOTING.md  prd.md  solana-stream-processor-architecture.md  yellowstone-vixen-architecture.md
docs/api/: handlers.md  metrics.md  parsers.md  runtime.md
docs/architecture/: core-concepts.md  data-flow.md  runtime.md
docs/development/: codama-integration.md  creating-parsers.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/programs/: adding-programs.md  supported-programs.md
examples/: parser-samples.md
examples/chainstack-integration/: Cargo.toml  chainstack-config.toml
examples/chainstack-integration/src/: main.rs
examples/prometheus/: README.md
examples/stream-parser/: README.md
go-client/: client.yaml  go.mod
go-client/internal/config/: config.go
go-client/internal/models/: parsed_data.go
go-pipeline/: go.mod
go-pipeline/cmd/pipeline/: main.go
go-pipeline/internal/config/: config.go
solana-stream-processor/: Cargo.toml  IMPLEMENTATION.md  README.md  config.toml  docker-compose.yml  prometheus.yml
solana-stream-processor/go-client/: go.mod  go.sum  main.go
solana-stream-processor/src/: config.rs  demo.rs  error.rs  main.rs  metrics.rs  models.rs
solana-stream-processor/src/handlers/: mod.rs  mongo_handler.rs  stream_handler.rs  unified_handler.rs
solana-stream-processor/src/models/: mod.rs  parsed_data.rs
solana-stream-processor/src/parsers/: mod.rs  proto_parsers.rs
solana-stream-processor/src/web/: mod.rs  server.rs  sse.rs
