[workspace]
members = [
    "crates/core",
    "crates/runtime", 
    "crates/pumpfun-parser",
    "crates/moonshot-parser",
    "crates/yellowstone-grpc-source",
    "crates/solana-rpc-source",
    "crates/proto",
    "crates/stream",
    "examples/*"
]
exclude = ["examples/streams-ts/", "solana-stream-processor"]
resolver = "2"

[workspace.dependencies]
yellowstone-grpc-client = { version = "9" }
yellowstone-grpc-proto = { version = "9", default-features = false }
yellowstone-vixen = { path = "crates/runtime", version = "0.4.0" }
yellowstone-vixen-stream = { path = "crates/stream", version = "0.0.0" }
yellowstone-vixen-core = { path = "crates/core", version = "0.4.0" }
yellowstone-vixen-proto = { path = "crates/proto", version = "0.4.0" }

yellowstone-vixen-pumpfun-parser = { path = "crates/pumpfun-parser", version = "0.4.0" }
yellowstone-vixen-moonshot-parser = { path = "crates/moonshot-parser", version = "0.4.0" }

# Sources
yellowstone-vixen-solana-rpc-source = { path = "crates/solana-rpc-source", version = "0.2.0" }
yellowstone-vixen-yellowstone-grpc-source = { path = "crates/yellowstone-grpc-source", version = "0.2.0" }


# helps resolving zeroize dependency conflicts betweeen solana creates depending on curve25519-dalek and yellowstone-grpc 
# https://github.com/solana-labs/solana/issues/26688
zeroize = { version = "1.7", default-features = false }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
