[package]
name = "chainstack-integration-example"
version = "0.1.0"
edition = "2021"
description = "Complete integration example for Chainstack Yellowstone gRPC with Vixen pipeline"

[dependencies]
# Core Yellowstone Vixen dependencies
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-chainstack-grpc-source = { workspace = true }

# Parser dependencies - covering all major Solana programs
yellowstone-vixen-jupiter-swap-parser = { workspace = true }
yellowstone-vixen-raydium-amm-v4-parser = { workspace = true }
yellowstone-vixen-raydium-clmm-parser = { workspace = true }
yellowstone-vixen-raydium-cpmm-parser = { workspace = true }
yellowstone-vixen-meteora-amm-parser = { workspace = true }
yellowstone-vixen-meteora-pools-parser = { workspace = true }
yellowstone-vixen-orca-whirlpool-parser = { workspace = true }
yellowstone-vixen-pumpfun-parser = { workspace = true }
yellowstone-vixen-pump-swaps-parser = { workspace = true }

# Additional utilities
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"